--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <body class="container" >
      <h1>Team Tech solutions</h1> 
     <div class="navbar">
+    <a href="home.html">home</a>
     <a href="videos.html">about</a>
     <a href="contact.html">contact us</a>
     <a href="registration.html">registration</a>
@@ -47,5 +48,6 @@
    </center>
 </body>
 </html>
+
 
 
