--- a/registration.html
+++ b/registration.html
@@ -97,10 +97,11 @@
     <center>
     <div>
        <span> Already registered?</span> 
-        <a href="thirdproject.html">login here</a>
+        <a href="index.html">login here</a>
         </div>
     </center>
     </form>
     
 </body>
+
 </html>
