--- a/registration.html
+++ b/registration.html
@@ -97,7 +97,7 @@
     <center>
     <div>
        <span> Already registered?</span> 
-        <a href="index.html">login here</a>
+        <a href="home.html">login here</a>
         </div>
     </center>
     </form>
@@ -105,3 +105,4 @@
 </body>
 
 </html>
+
